app/assets/stylesheets/pages.css.scss
/* ... */
.avatar_stream {
  height: 20px;
  width: 20px;
  overflow: hidden;
  display: inline-block;
}

/* Loading overlay */

.loadOverlay {
  z-index:9001;
  display:none;
  width:100%; height:100%;
  position:absolute; left:0; top:0;
  background:#111; 
}

.loadOverlay .overlayMessage {
  z-index:9002;
  top:30%; left:40%;
  padding:2em; position:absolute;
  background:#000; color:#FFF;
  border-radius:7px;
  width:600px;  
}

.loadOverlay .overlayMessage .message {
  padding-top:6px; font-size:18px;
}

/* ---------------------------------- */
/* Feedback */
#feedback {
  z-index:2999;
  position:absolute;
  display: none;
  box-shadow:2px 2px 2px #666;
}

#feedbackSideButton {
  height:97px;
  width:40px;
  background:url('/assets/feedback.png');
  position:absolute;
  left:0px;
  top:30%;
  cursor:pointer;
}

#feedbackErrorMessage {
  display: none;
}

.errorForm { border:1px solid #B94A48;}

/* game/id/play */
#game-li-template {
  display: none;
}

/* General */
/* ---------------------------------- */

.previous_page{
  margin-right:5px;
}


/* Profile */
/* ---------------------------------- */

#profile #graphicsLayer #graphics {
  margin:0 0 0 30px;
}

#profile #graphicsLayer .graphic {
  position:relative;
  width:128px;
  height:128px;
  border: 1px solid #e9e9e9;
  overflow:hidden;
}

#profile #graphicsLayer .graphic:hover {
  border: 1px solid $gray;
}

#profile .settings {
  border-top: 1px solid #CCC;
  margin-top:5px;
  padding-top: 2px;
}

#profile .settings .wrapper {
  padding:3px;font-size:0.9em
}

#backgroundLayer, #graphicsLayer {
  display:none;
}

.backgroundImage {
  width:320px; height:195px;
  background-size:cover;
}

#profilewrap #display_name_form {
  display: none;  
  margin:0; padding:0;
}

#profilewrap .edit {
  cursor:pointer;
}

#profilewrap #profile_name_wrapper {
  margin:4px 0 4px 0;
}

#profilewrap #display_name {
  font-size:1.6em;
  font-weight:bold;
}

#profilewrap #user_display_name {
  font-size:1.4em;
}

.paginate_buttons {
  display: block;
  margin:1.5em 0 1.5em 0;  
}

/* Activity Stream */

#messages {
  margin-bottom: 20px;
}

#messages .stream-image, #messages-public .stream-image {
  margin-right: 5px;
}

#messages ul, #messages-public ul {
  list-style-type: none;
  margin:0; padding:0;
  height: 114px;
  overflow: auto;
  box-shadow: 0 0 5px #888 inset;
}

#messages ul {
  height: 100px;
}

#messages ul li, #messages-public ul li {
  padding-bottom: 4px;
  border-bottom:1px solid #EEE;
  margin-top: 5px;
  padding-left: 10px;
}

/* Gallery */
/* ---------------------------------- */

#sort-bar {
  background:#F5F5F5;
  background-image: -moz-linear-gradient(center top , #FFFFFF, #E6E6E6);
  background-image: -webkit-linear-gradient(#FFFFFF, #E6E6E6);
  background-image: -o-linear-gradient(#FFFFFF, #E6E6E6);
  border-radius:4px;
  margin-left:2px;
}

#sort-bar button, #sort-bar .dropdown-toggle {
  border:none;
  box-shadow: none !important;
  border-radius:none;  
  background:url(line.png) right no-repeat;
}

#sort-bar .btn.active, #sort-bar .btn:active {
  color:$red;
  background-image: -moz-linear-gradient(center top , #FFFFFF, #E6E6E6);
  background-image: -webkit-linear-gradient(#FFFFFF, #E6E6E6);
  background-image: -o-linear-gradient(#FFFFFF, #E6E6E6);
  background:url(line.png) right no-repeat;
}

#sort-bar .game-select {
  margin-left:0px;
  width:120px;
}

#sort-bar .piece {
  margin:0;
}

#sort-bar .btn-group.open .dropdown-toggle {
  box-shadow:none;
}

#gamesList { 
  
  .gameAuthor {
    position:absolute; top:99px; right:6px;
    width:30px; height:30px; z-index:300; display: inline;
    background-size: cover;
    background-repeat: no-repeat;
    border:1px solid #222;
    
    &:hover {
      border:1px solid #F6F6F6; 
    }

  }

  a, a:hover {
    color:$gray;
  }
  
  h5, .gameDetails {
    margin-top:2px;
  }

  .gameDetails {
    color:$gray;
    font-size:0.8em;
  }

  .gameStats {
    width:130px;text-align:right;
    color:#CBCBCB;
  }

  h5 {
    font-family: 'Helvetica Neue', 'Helvetica', 'Arial', sans-serif;
    font-size: 14px;
    font-weight: bold;
    letter-spacing: -1px;
    line-height: 30px;
    text-transform: lowercase;
    margin:0;
  }
  
  img {
    height: 130px;
  }

  .thumbnail {
    background:#FFF;
  }
}

.share_button { display: inline;}

canvas {
  -webkit-tap-highlight-color: transparent; /* Fix for iOS' annoying highlight on canvas select */
}

#difficulty span {
  font-size: 14px;
  font-weight: bolder;
}

.easy { background-color: $green; }

.moderate { background-color: $font ; }/*#FFBC00*/

.hard { background-color: $red; }

.gallery_paginate_buttons {
  padding-top:5px;
  text-align: right;
  margin-left:125px;
}

.icon-gallery-played {
  background:url(game/views_gallery.png) no-repeat center center;
  width:16px; height:16px;
}

.icon-gallery-like {
  background:url(game/like_gallery.png) no-repeat center center;
  width:16px; height:16px;
}

.icon-gallery-comments {
  background:url(game/comments_gallery.png) no-repeat center center;
  width:16px; height:16px;
}

.icon-gallery-played, .icon-gallery-comments, .icon-gallery-like {
  margin-top:-1px;
}

/* CREATE  - Editor Page when user !logged_in */
#create {
  position:relative;
}

#create .container {
  position:relative;
  width:900px;
  background:$white;
  padding:20px;
  margin:0 0 30px 0;
}

#create .banner {
  margin: 0 0 0 20px;
  width:70px;
}

#create .container .banner {
  margin:0;
  padding-right:20px;
  width:auto;
}

#create .note {
  margin:40px 0 20px 0;
  width:860px;
  background:$lightgray;
  padding:20px;
  border-radius:15px;
}

#create img.slider_left {
  float:left;
  top:135px;
  position:relative;
  left:-20px;
}

#create img.slider_right {
  float:left;
  top:135px;
  position:relative;
  left:60px;
}

/* PLAY site */

#playGame {
  background:#EEE;border:1px solid #CCC;padding:10px;
}

#playGame .gameDetailAuthor {
  font-size: 1.8em;
  border-bottom:1px solid #CCC;
}

#playGame #ratingWrapper {
}
/* ... */

